Projaect setting update

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Temp/
 Obj/
 UnityGenerated/
 Library/
+Bin/
  
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
